      (James Westby, Andrew Cowie)

    * Diff is now more specific about execute-bit changes it describes
      (Chad Miller)

    * Fetching data over HTTP is a bit faster when urllib is used.  This is done
      by forcing it to recv 64k at a time when reading lines in HTTP headers,
      rather than just 1 byte at a time.  (Andrew Bennetts)

    * Log --short and --line are much faster when -r is not specified.
      (Aaron Bentley)

    * Merge is faster.  We no longer check a file's existence unnecessarily
      when merging the execute bit.  (Aaron Bentley)

    * ``bzr status`` on an explicit list of files no longer shows pending
      merges, making it much faster on large trees. (John Arbash Meinel)

    * The launchpad directory service now warns the user if they have not set
      their launchpad login and are trying to resolve a URL using it, just
      in case they want to do a write operation with it.  (James Westby)

    * The smart protocol client is slightly faster, because it now only queries
      the server for the protocol version once per connection.  Also, the HTTP
      transport will now automatically probe for and use a smart server if
      one is present.  You can use the new ``nosmart+`` transport decorator
      to get the old behaviour.  (Andrew Bennetts)

     * Various operations with revision specs and commands that calculate
       revnos and revision ids are faster.  (John A. Meinel, Aaron Bentley)

  BUGFIXES:

    * Add ``root_client_path`` parameter to SmartWSGIApp and
      SmartServerRequest.  This makes it possible to publish filesystem
      locations that don't exactly match URL paths. SmartServerRequest
      subclasses should use the new ``translate_client_path`` and
      ``transport_from_client_path`` methods when dealing with paths received
      from a client to take this into account.  (Andrew Bennetts, #124089)

    * ``bzr mv a b`` can be now used also to rename previously renamed