@@ -44,6 +44,9 @@ IN DEVELOPMENT
       by forcing it to recv 64k at a time when reading lines in HTTP headers,
       rather than just 1 byte at a time.  (Andrew Bennetts)
 
+    * ``LockDir`` lock acquisition and release now trigger hooks allowing
+      introspection of locking activity. (Robert Collins)
+
     * Log --short and --line are much faster when -r is not specified.
       (Aaron Bentley)
 
